fix: removed parameterized constructor and used non-parameterized one for Code Quality